[tool.poetry]
name = "convert-use"
version = "0.1.0"
description = ""
authors = ["Setu Shah <setu+convert-use@setu.me>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.2.0"
torch = "^1.5.1"
tensorflow-hub = "^0.8.0"
tensorflow-text = "^2.2.1"
ipykernel = "^5.3.0"
ipython = "^7.16.1"
sentencepiece = "^0.1.92"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
